--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ torch==2.6.0
 torchvision==0.21.0
 torchaudio
 ultralytics==8.3.200
-opencv-python-headless==4.10.0.84
+opencv-python-headless
 matplotlib==3.10.3
 pillow==11.3.0
